# flagpp

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml
include/flagpp/: flags.hpp  flags.inl
include/flags/: flags.hpp  flags.inl
tests/: CMakeLists.txt  basic.cpp  basic.test.cpp
